--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -14,11 +14,12 @@
   letter-spacing: 0.06em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-}
-.button:hover,
-.button:focus {
-  color: var(--second-color);
-  background-color: var(--double-accent-color);
+
+  &:hover,
+  &:focus {
+    color: var(--second-color);
+    background-color: var(--double-accent-color);
+  }
 }
 
 .button-secondary {
@@ -36,11 +37,12 @@
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.button-secondary:hover,
-.button-secondary:focus {
-  background-color: var(--accent-color);
-  color: var(--second-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: var(--second-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
