--- a/sass/components/_footer-social-link.scss
+++ b/sass/components/_footer-social-link.scss
@@ -11,31 +11,32 @@
   justify-content: space-between;
   width: 206px;
   margin-top: 20px;
+
+  &-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    fill: var(--second-color);
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      background-color: var(--accent-color);
+    }
+  }
 }
-.footer-social-list-link,
-.footer-social-list-link {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-.footer-social-list-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  fill: var(--second-color);
-  border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-social-list-link:hover,
-.footer-social-list-link:focus {
-  background-color: var(--accent-color);
-}
+
 .footer-social-list-icon {
   width: 20px;
   height: 20px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-social-list-link:hover .social-list-icon,
-.footer-social-list-link:focus .social-list-icon {
-  fill: var(--second-color);
+
+  .footer-social-list-link:hover &,
+  .footer-social-list-link:focus & {
+    fill: var(--second-color);
+  }
 }
