--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -10,17 +10,17 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-}
 
-.modal-title {
-  margin-top: 0;
-  margin-bottom: 12px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
+  &-title {
+    margin-top: 0;
+    margin-bottom: 12px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+  }
 }
 
 .contact-form {
@@ -53,6 +53,11 @@
   box-sizing: border-box;
   border-radius: 4px;
   padding-left: 42px;
+
+  &:focus {
+    border-color: var(--accent-color);
+    outline: none;
+  }
 }
 .modal-form-icon {
   position: absolute;
@@ -60,6 +65,10 @@
   left: 12px;
   display: block;
   transform: translateY(-50%);
+
+  .modal-form-input:focus + & {
+    fill: var(--accent-color);
+  }
 }
 .form-field label {
   margin-bottom: 4px;
@@ -90,15 +99,6 @@
   resize: none;
 }
 
-.modal-form-input:focus {
-  border-color: var(--accent-color);
-  outline: none;
-}
-
-.modal-form-input:focus + .modal-form-icon {
-  fill: var(--accent-color);
-}
-
 .modal-form-message {
   width: 100%;
   height: 120px;
@@ -108,19 +108,19 @@
   resize: none;
   padding: 12px 16px;
   margin-top: 4px;
-}
 
-.modal-form-message::placeholder {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.01em;
-  font-weight: 400;
-  color: rgba(117, 117, 117, 0.5);
-}
+  &::placeholder {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    font-weight: 400;
+    color: rgba(117, 117, 117, 0.5);
+  }
 
-.modal-form-message:focus {
-  border-color: var(--accent-color);
-  outline: none;
+  &:focus {
+    border-color: var(--accent-color);
+    outline: none;
+  }
 }
 
 .modal-form-policy-link {
@@ -141,15 +141,14 @@
   border-radius: 2px;
   margin-right: 7px;
   cursor: pointer;
-}
 
-.modal-form-checkbox:checked + .modal-form-checkbox-policy::before {
-  border-color: transparent;
-  background-image: url(../images/icon/icon-check.svg);
-  background-size: contain;
-  background-origin: border-box;
-}
-
-.modal-form-checkbox:focus + .modal-form-checkbox-policy::before {
-  border-color: var(--accent-color);
+  .modal-form-checkbox:checked + & {
+    border-color: transparent;
+    background-image: url(../images/icon/icon-check.svg);
+    background-size: contain;
+    background-origin: border-box;
+  }
+  .modal-form-checkbox:focus + & {
+    border-color: var(--accent-color);
+  }
 }
