--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -13,17 +13,20 @@
   border-radius: 50%;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
-.social-list-link:hover,
-.social-list-link:focus {
-  background-color: var(--accent-color);
-}
+
 .social-list-icon {
   width: 20px;
   height: 20px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-list-link:hover .social-list-icon,
-.social-list-link:focus .social-list-icon {
-  fill: var(--second-color);
+
+  .social-list-link:hover &,
+  .social-list-link:focus & {
+    fill: var(--second-color);
+  }
 }
