--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -4,10 +4,12 @@
 }
 .clients-list-item {
   margin-right: 30px;
+
+  .clients-list &:nth-child(6n) {
+    margin-right: 0px;
+  }
 }
-.clients-list .clients-list-item:nth-child(6n) {
-  margin-right: 0px;
-}
+
 .clients-list-link {
   display: flex;
   justify-content: center;
@@ -19,15 +21,18 @@
   border-radius: 4px;
   fill: var(--accent-icon-color);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus,
+  &:hover {
+    border-color: var(--accent-color);
+  }
 }
-.clients-list-link:focus,
-.clients-list-link:hover {
-  border-color: var(--accent-color);
-}
+
 .clients-list-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.clients-list-link:focus .clients-list-icon,
-.clients-list-link:hover .clients-list-icon {
-  fill: var(--accent-color);
+
+  .clients-list-link:focus &,
+  .clients-list-link:hover & {
+    fill: var(--accent-color);
+  }
 }
