--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -4,37 +4,41 @@
 .features-list {
   display: flex;
   flex-wrap: wrap;
-}
-.features-list .item {
-  width: 270px;
-  margin-right: 30px;
-}
-.features-list .item:nth-child(4n) {
-  margin-right: 0;
+
+  & .item {
+    width: 270px;
+    margin-right: 30px;
+
+    &:nth-child(4n) {
+      margin-right: 0;
+    }
+  }
 }
 .title {
   margin-bottom: 10px;
+
+  .features-list & {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-top: 0;
+  }
 }
 .text {
   margin-top: 0;
   margin-bottom: 0;
-}
-.features-list .title {
-  margin-top: 0;
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-.features-list .text {
-  margin-top: 0;
-  margin-bottom: 94;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
+
+  .features-list & {
+    margin-bottom: 94;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    margin-top: 0;
+  }
 }
 .features-item {
   width: 270px;
