--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -24,10 +24,12 @@
 .site-nav {
   display: flex;
   margin-left: 93px;
+
+  & .item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
-.site-nav .item:not(:last-child) {
-  margin-right: 50px;
-}
+
 .site-nav .nav-link {
   padding-bottom: 32px;
   padding-top: 32px;
@@ -40,45 +42,50 @@
   letter-spacing: 0.02em;
   padding: 32px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
-.site-nav .nav-link:hover,
-.site-nav .nav-link:focus {
-  color: var(--accent-color);
-}
+
 .site-nav .nav-link.current {
   color: var(--accent-color);
   position: relative;
+
+  &::after {
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    padding-bottom: 32px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    border-bottom: 4px solid var(--accent-color);
+    content: '';
+  }
 }
-.site-nav .nav-link.current::after {
-  content: '';
-  display: block;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  padding-bottom: 32px;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  border-bottom: 4px solid var(--accent-color);
-}
+
 /* Contact-nav */
 .contact {
   display: flex;
   margin-left: auto;
-}
-.contact .item + .item {
-  margin-left: 50px;
-}
-.contact .nav-link {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  color: var(--primary-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  & .item + .item {
+    margin-left: 50px;
+  }
+  & .nav-link {
+    align-items: center;
+    text-decoration: none;
+    color: var(--primary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+  }
 }
 .nav-link:hover,
 .nav-link:focus {
@@ -88,8 +95,9 @@
   margin-right: 10px;
   fill: var(--primary-text-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.nav-link:hover .contact-list-icon,
-.nav-link:focus .contact-list-icon {
-  fill: var(--accent-color);
+
+  .nav-link:hover &,
+  .nav-link:focus & {
+    fill: var(--accent-color);
+  }
 }
