--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -12,14 +12,15 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
-.hero-title {
-  margin-top: 0;
-  margin-bottom: 30px;
-  color: var(--second-color);
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+
+  &-title {
+    margin-bottom: 30px;
+    color: var(--second-color);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    margin-top: 0;
+  }
 }
