--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -6,11 +6,35 @@
   min-height: 368px;
   display: flex;
   justify-content: center;
+
+  & .item-card {
+    margin-right: 30px;
+    width: 270px;
+  }
+
+  & .item-card:nth-child(4n) {
+    margin-right: 0;
+  }
+
+  & .team-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    margin-bottom: 10px;
+    color: var(--title-text-color);
+  }
+
+  & .text-team {
+    font-size: 16px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    margin: 0 auto;
+    margin-bottom: 16px;
+    font-weight: 400;
+  }
 }
-.team-list .item-card {
-  width: 270px;
-  margin-right: 30px;
-}
+
 .item-card {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -23,24 +47,4 @@
   padding-left: 32px;
   padding-right: 32px;
   text-align: center;
-}
-.team-list .item-card:nth-child(4n) {
-  margin-right: 0;
-}
-.team-list .team-title {
-  color: var(--title-text-color);
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  margin-bottom: 10px;
-}
-.team-list .text-team {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  margin: 0 auto;
-  margin-bottom: 16px;
 }
