--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -4,16 +4,25 @@
   margin-left: -30px;
   margin-top: -30px;
   box-sizing: border-box;
+
+  & .work-name {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--title-text-color);
+  }
+
+  & > .work-item {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 3 - 30px);
+  }
 }
 
 .work-wrapper {
   position: relative;
   overflow: hidden;
-}
-.work-list-link:focus .overlay,
-.work-list-link:hover .overlay {
-  opacity: 1;
-  transform: translateY(0);
 }
 
 .overlay {
@@ -32,39 +41,24 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
+
+  .work-list-link:focus &,
+  .work-list-link:hover & {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 .work-list-link {
   display: block;
   text-decoration: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.work-list-link:focus,
-.work-list-link:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
 
-.work > .work-item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-left: 30px;
-  margin-top: 30px;
-}
-
-.work .work-name {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-}
-
-.work .work-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  &:focus,
+  &:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .work-title {
@@ -76,4 +70,12 @@
 
 .work-text {
   margin-top: 4px;
+
+  .work & {
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+    font-weight: 400;
+  }
 }
