--- a/sass/layout/_section-title.scss
+++ b/sass/layout/_section-title.scss
@@ -11,7 +11,7 @@
 .doing-list {
   display: flex;
 
-  & .item:not(:last-child) {
+  & .doing-list__item:not(:last-child) {
     margin-right: 30px;
   }
 }
