--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,7 @@ body {
   justify-content: space-between;
 }
 
-.social-list-link {
+.social-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -157,18 +157,18 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover, .social-list-link:focus {
+.social-list__link:hover, .social-list__link:focus {
   background-color: var(--accent-color);
 }
 
-.social-list-icon {
+.social-list__icon {
   width: 20px;
   height: 20px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover .social-list-icon,
-.social-list-link:focus .social-list-icon {
+.social-list__link:hover .social-list__icon,
+.social-list__link:focus .social-list__icon {
   fill: var(--second-color);
 }
 
@@ -188,7 +188,7 @@ body {
   margin-top: 20px;
 }
 
-.footer-social-list-link {
+.footer-social-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -200,18 +200,18 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-social-list-link:hover, .footer-social-list-link:focus {
+.footer-social-list__link:hover, .footer-social-list__link:focus {
   background-color: var(--accent-color);
 }
 
-.footer-social-list-icon {
+.footer-social-list__icon {
   width: 20px;
   height: 20px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-social-list-link:hover .footer-social-list-icon,
-.footer-social-list-link:focus .footer-social-list-icon {
+.footer-social-list__link:hover .footer-social-list__icon,
+.footer-social-list__link:focus .footer-social-list__icon {
   fill: var(--second-color);
 }
 
@@ -418,11 +418,11 @@ body {
   margin-left: 93px;
 }
 
-.site-nav .item:not(:last-child) {
+.site-nav .site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.site-nav .nav-link {
+.site-nav__link {
   padding-bottom: 32px;
   padding-top: 32px;
   display: block;
@@ -436,16 +436,16 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav .nav-link:hover, .site-nav .nav-link:focus {
+.site-nav__link:hover, .site-nav__link:focus {
   color: var(--accent-color);
 }
 
-.site-nav .nav-link.current {
+.site-nav__link.current {
   color: var(--accent-color);
   position: relative;
 }
 
-.site-nav .nav-link.current::after {
+.site-nav__link.current::after {
   display: block;
   position: absolute;
   left: 0;
@@ -464,11 +464,11 @@ body {
   margin-left: auto;
 }
 
-.contact .item + .item {
+.contact .contact__item + .contact__item {
   margin-left: 50px;
 }
 
-.contact .nav-link {
+.contact .contact__link {
   align-items: center;
   text-decoration: none;
   color: var(--primary-text-color);
@@ -480,19 +480,19 @@ body {
   display: flex;
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.contact__link:hover,
+.contact__link:focus {
   color: var(--accent-color);
 }
 
-.contact-list-icon {
+.contact__icon {
   margin-right: 10px;
   fill: var(--primary-text-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:hover .contact-list-icon,
-.nav-link:focus .contact-list-icon {
+.contact__link:hover .contact__icon,
+.contact__link:focus .contact__icon {
   fill: var(--accent-color);
 }
 
@@ -537,7 +537,7 @@ body {
   display: flex;
 }
 
-.doing-list .item:not(:last-child) {
+.doing-list .doing-list__item:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -569,12 +569,12 @@ body {
   flex-wrap: wrap;
 }
 
-.features-list .item {
+.features-list .features-list__item {
   width: 270px;
   margin-right: 30px;
 }
 
-.features-list .item:nth-child(4n) {
+.features-list .features-list__item:nth-child(4n) {
   margin-right: 0;
 }
 
@@ -617,7 +617,7 @@ body {
   border-radius: 4px;
 }
 
-.features-list-icon {
+.features-list__icon {
   width: 70px;
   height: 70px;
 }
@@ -679,15 +679,15 @@ body {
   justify-content: space-between;
 }
 
-.clients-list-item {
+.clients-list__item {
   margin-right: 30px;
 }
 
-.clients-list .clients-list-item:nth-child(6n) {
+.clients-list .clients-list__item:nth-child(6n) {
   margin-right: 0px;
 }
 
-.clients-list-link {
+.clients-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -700,16 +700,16 @@ body {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-list-link:focus, .clients-list-link:hover {
+.clients-list__link:focus, .clients-list__link:hover {
   border-color: var(--accent-color);
 }
 
-.clients-list-icon {
+.clients-list__icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-list-link:focus .clients-list-icon,
-.clients-list-link:hover .clients-list-icon {
+.clients-list__link:focus .clients-list__icon,
+.clients-list__link:hover .clients-list__icon {
   fill: var(--accent-color);
 }
 
@@ -790,7 +790,7 @@ body {
   justify-content: center;
 }
 
-.footer-form-email {
+.footer-form__email {
   font-size: 16px;
   line-height: 20px;
   color: rgba(255, 255, 255, 0.6);
@@ -806,7 +806,7 @@ body {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-form-btn {
+.footer-form__btn {
   position: relative;
   display: inline-flex;
   justify-content: center;
@@ -827,7 +827,7 @@ body {
   border-radius: 4px;
 }
 
-.footer-btn-icon {
+.footer-form__btn-icon {
   fill: var(--second-color);
   margin-left: 10px;
 }
@@ -843,7 +843,7 @@ body {
   margin-bottom: 34px;
 }
 
-.filter-menu-item:not(:last-child) {
+.filter-menu__item:not(:last-child) {
   margin-right: 8px;
 }
 
@@ -863,7 +863,7 @@ body {
   color: var(--title-text-color);
 }
 
-.work > .work-item {
+.work > .work__item {
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc(100% / 3 - 30px);
@@ -891,19 +891,19 @@ body {
   opacity: 0;
 }
 
-.work-list-link:focus .overlay,
-.work-list-link:hover .overlay {
+.work__link:focus .overlay,
+.work__link:hover .overlay {
   transform: translateY(0);
   opacity: 1;
 }
 
-.work-list-link {
+.work__link {
   display: block;
   text-decoration: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.work-list-link:focus, .work-list-link:hover {
+.work__link:focus, .work__link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
