--- a/sass/components/_footer-social-link.scss
+++ b/sass/components/_footer-social-link.scss
@@ -12,7 +12,7 @@
   width: 206px;
   margin-top: 20px;
 
-  &-link {
+  &__link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,13 +30,13 @@
   }
 }
 
-.footer-social-list-icon {
+.footer-social-list__icon {
   width: 20px;
   height: 20px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .footer-social-list-link:hover &,
-  .footer-social-list-link:focus & {
+  .footer-social-list__link:hover &,
+  .footer-social-list__link:focus & {
     fill: var(--second-color);
   }
 }
