--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
 }
-.clients-list-item {
+.clients-list__item {
   margin-right: 30px;
 
   .clients-list &:nth-child(6n) {
@@ -10,7 +10,7 @@
   }
 }
 
-.clients-list-link {
+.clients-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,11 +28,11 @@
   }
 }
 
-.clients-list-icon {
+.clients-list__icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .clients-list-link:focus &,
-  .clients-list-link:hover & {
+  .clients-list__link:focus &,
+  .clients-list__link:hover & {
     fill: var(--accent-color);
   }
 }
