--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-wrap: wrap;
 
-  & .item {
+  & .features-list__item {
     width: 270px;
     margin-right: 30px;
 
@@ -50,7 +50,7 @@
   background-color: var(--background-fon-color-team);
   border-radius: 4px;
 }
-.features-list-icon {
+.features-list__icon {
   width: 70px;
   height: 70px;
 }
