--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -65,7 +65,7 @@
   display: flex;
   justify-content: center;
 }
-.footer-form-email {
+.footer-form__email {
   font-size: 16px;
   line-height: 20px;
   color: rgba(255, 255, 255, 0.6);
@@ -80,7 +80,7 @@
   padding-left: 16px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-form-btn {
+.footer-form__btn {
   position: relative;
   display: inline-flex;
   justify-content: center;
@@ -101,7 +101,7 @@
   border-radius: 4px;
 }
 
-.footer-btn-icon {
+.footer-form__btn-icon {
   fill: var(--second-color);
   margin-left: 10px;
 }
