--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -25,12 +25,12 @@
   display: flex;
   margin-left: 93px;
 
-  & .item:not(:last-child) {
+  & .site-nav__item:not(:last-child) {
     margin-right: 50px;
   }
 }
 
-.site-nav .nav-link {
+.site-nav__link {
   padding-bottom: 32px;
   padding-top: 32px;
   display: block;
@@ -49,7 +49,7 @@
   }
 }
 
-.site-nav .nav-link.current {
+.site-nav__link.current {
   color: var(--accent-color);
   position: relative;
 
@@ -72,10 +72,10 @@
   display: flex;
   margin-left: auto;
 
-  & .item + .item {
+  & .contact__item + .contact__item {
     margin-left: 50px;
   }
-  & .nav-link {
+  & .contact__link {
     align-items: center;
     text-decoration: none;
     color: var(--primary-text-color);
@@ -87,17 +87,17 @@
     display: flex;
   }
 }
-.nav-link:hover,
-.nav-link:focus {
+.contact__link:hover,
+.contact__link:focus {
   color: var(--accent-color);
 }
-.contact-list-icon {
+.contact__icon {
   margin-right: 10px;
   fill: var(--primary-text-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .nav-link:hover &,
-  .nav-link:focus & {
+  .contact__link:hover &,
+  .contact__link:focus & {
     fill: var(--accent-color);
   }
 }
