--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -8,6 +8,9 @@
   justify-content: center;
   margin-bottom: 34px;
 }
-.filter-menu-item:not(:last-child) {
-  margin-right: 8px;
+
+.filter-menu__item {
+  &:not(:last-child) {
+    margin-right: 8px;
+  }
 }
