--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -13,7 +13,7 @@
     color: var(--title-text-color);
   }
 
-  & > .work-item {
+  & > .work__item {
     margin-left: 30px;
     margin-top: 30px;
     flex-basis: calc(100% / 3 - 30px);
@@ -42,14 +42,14 @@
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
 
-  .work-list-link:focus &,
-  .work-list-link:hover & {
+  .work__link:focus &,
+  .work__link:hover & {
     transform: translateY(0);
     opacity: 1;
   }
 }
 
-.work-list-link {
+.work__link {
   display: block;
   text-decoration: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
